update. index 首页样式； update. html fade-up 效果

--- a/assets/css/activity_category.css
+++ b/assets/css/activity_category.css
@@ -156,6 +156,7 @@
     font-size: 32px;
     font-weight: 600;
     text-align: left;
+    color: black;
     border-left: 4px solid #4869df;
     transition: color ease-in-out 0.3s;
 }
