update. index 社区成员排序依据描述； update. html 网页脚。

--- a/assets/css/committee.css
+++ b/assets/css/committee.css
@@ -1,4 +1,4 @@
-#committee-container {
+.committee-container-bottom {
     margin-bottom: 150px;
 }
 
@@ -33,3 +33,4 @@
     font-weight: 300;
     font-style: italic;
 }
+
