--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -111,13 +111,57 @@
     color: black;
 }
 
-#committee-title p, #committee-title h2 {
+#committee-title #committee-title-sub-tip {
+    margin-top: 8px;
+    color: rgba(145, 149, 162, 0.65);
+    font-size: 14px;
+    font-weight: 300;
+    font-style: italic;
+}
+
+#committee-title p, #committee-title h2, #committee-title #committee-title-sub-tip {
     transition: color ease-in-out 0.5s;
 }
 
-#committee-title p:hover, #committee-title h2:hover {
+#committee-title p:hover, #committee-title h2:hover, #committee-title #committee-title-sub-tip:hover {
     color: #4869de;
 }
+
+#committee-former-link {
+    margin-bottom: 150px;
+}
+
+/*.line-link {*/
+/*    width: fit-content;*/
+/*    margin: 0 auto;*/
+/*    text-align: center;*/
+/*}*/
+
+/*.line-link p{*/
+/*    width: 100%;*/
+/*    padding: 30px 0 10px;*/
+/*    font-size: 18px;*/
+/*    font-weight: 400;*/
+/*    color: #9195a2;*/
+/*    border-bottom: #9195a2 1px solid;*/
+/*}*/
+
+/*.line-link::after {*/
+/*    width: 144px;*/
+/*    content: '';*/
+/*    position: absolute;*/
+/*    bottom: 0;*/
+/*    left: 0;*/
+/*    right: 0;*/
+/*    height: 50px;*/
+/*    margin: 0 auto;*/
+/*    background: linear-gradient(*/
+/*            to top,*/
+/*            rgba(145, 149, 162, 0.5),*/
+/*            rgba(145, 149, 162, 0) 20%*/
+/*    );*/
+/*    pointer-events: none;*/
+/*}*/
 
 
 /*#activity-category-gallery {*/
