--- a/assets/css/activity_category.css
+++ b/assets/css/activity_category.css
@@ -1,6 +1,7 @@
 #activity-category-gallery {
     width: 100%;
     max-height: 100vh;
+    position: relative;
 }
 
 #slides-container {
@@ -145,6 +146,19 @@
 
 .activity-category-info {
     padding-left: 40px;
+}
+
+@media (max-width: 767px) {
+    .activity-category-box {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .activity-category-info {
+        max-width: 100vw;
+        padding-left: 0;
+        margin-top: 20px;
+    }
 }
 
 /* TODO: 标题颜色渐变 */
