--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -687,6 +687,8 @@ h6 {
 
 #about {
     padding: 140px 0 120px 0;
+    max-width: 100vw !important;
+    overflow: hidden;
 }
 
 @media (max-width: 991px) {
@@ -711,9 +713,13 @@ h6 {
 }
 
 #about-content-box{
-    max-width: 90vw !important;
     transform: scale(1);
-    animation: scaleUp 2.5s ease-in-out forwards;
+}
+
+@media (min-width: 991px) {
+    #about-content-box{
+        animation: scaleUp 2.5s ease-in-out forwards;
+    }
 }
 
 #about-content{
