--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-    background: #fff;
+    background: #EBF5F8;
     color: #2f3138;
     font-family: system-ui,
         Georgia,
