--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2026,6 +2026,10 @@ h6 {
     margin-bottom: 10px;
 }
 
+#footer .footer-top .footer-wechat h4 {
+    text-transform: none;
+}
+
 #footer .footer-top .footer-info h3 {
     font-size: 26px;
     margin: 0 0 20px 0;
