--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1547,7 +1547,7 @@ h6 {
 # Gallery Section
 --------------------------------------------------------------*/
 #gallery {
-    padding: 30px 0 40px 0;
+    padding: 0 0 40px 0;
     overflow: hidden;
     background: #EBF5F8;
 }
