update. activity 新增环节内视频跳转按钮; update. db

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1224,6 +1224,8 @@ h6 {
 #schedule .label-box {
     float: right;
     margin-right: 20px;
+    padding-top: 6px;
+    padding-right: 5px;
     font-size: 15px;
     font-weight: normal
 }
