--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -34,8 +34,8 @@
     overflow: hidden;
     border-radius: 5px;
     background: #fff;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-    transition: transform 0.8s ease-in-out;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+    transition: transform 0.5s ease-in-out;
 }
 
 .schedule-card.schedule-card-add {
@@ -44,7 +44,7 @@
 }
 
 .schedule-card:hover {
-    transform: scale(1.05);
+    transform: scale(1.03);
 }
 
 .project-info {
@@ -59,9 +59,21 @@
     text-align: left;
     font-size: 22px !important;
     font-weight: 600;
-    margin-bottom: 10px;
+    margin-bottom: 9px;
     color: #2f3138;
     transition: color 0.3s ease-in-out;
+}
+
+.project-repo {
+    padding-left: 12px;
+    margin-top: 10px;
+}
+
+.project-repo img {
+    height: 20px;
+    width: auto;
+    padding: 0 6px 0 0;
+    margin-bottom: 5px;
 }
 
 .project-description {
@@ -74,3 +86,31 @@
 .project-name:hover, .project-description:hover {
     color: #4869df;
 }
+
+/* TODO：瀑布流代码优化 */
+.waterfall-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: stretch;
+}
+
+.waterfall-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: stretch;
+    flex: 1;
+}
+
+.waterfall-column {
+    margin: 0 10px;
+}
+
+/*.waterfall-container {*/
+/*    column-count: 2;*/
+/*}*/
+
+/*.waterfall-item {*/
+/*    break-inside: avoid;*/
+/*}*/
